--- a/inventory-control/WebContent/css/style.css
+++ b/inventory-control/WebContent/css/style.css
@@ -49,7 +49,7 @@ article	{background-color: #ffffff;
 		box-sizing: border-box;
 		margin-bottom: 15px;
 		border-radius: 20px}
-
+		
 input#submit_buttona {width: 150px;
 					 font-size: 18px;
 					 font-weight: bold;
@@ -98,27 +98,27 @@ input#submit_buttond {width: 150px;
 					 padding-top: 10px;
 					 padding-bottom: 10px}
 					 
-table#tablea	{margin-left: auto;
+table#newtable	{margin-left: auto;
 				margin-right: auto}
 					 
-table#tablea th	{width: 60%;
-				padding: 10px 10px 10px 20px;
-				text-align: left}
+table#newtable th	{width: 60%;
+					padding: 10px 10px 10px 20px;
+					text-align: left}
 
-table#tablea td	{width: 40%;
-				padding: 10px 20px 10px 10px;
-				text-align: left}
+table#newtable td	{width: 40%;
+					padding: 10px 20px 10px 10px;
+					text-align: left}
 				
-table#tableb	{margin-left: auto;
-				margin-right: auto}
+table#logintable	{margin-left: auto;
+					margin-right: auto}
 					 
-table#tableb th	{width: 45%;
-				padding: 10px 10px 10px 20px;
-				text-align: left}
+table#logintable th	{width: 45%;
+					padding: 10px 10px 10px 20px;
+					text-align: left}
 
-table#tableb td	{width: 55%;
-				padding: 10px 20px 10px 10px;
-				text-align: left}
+table#logintable td	{width: 55%;
+					padding: 10px 20px 10px 10px;
+					text-align: left}
 				
 table#botton	{margin-left: auto;
 				margin-right: auto}
@@ -128,3 +128,14 @@ table#botton th	{width: 50%;
 
 table#botton td	{width: 50%;
 				padding: 10px 10px 10px 10px}
+				
+table#maintable	{margin-left: auto;
+				margin-right: auto}
+					 
+table#maintable th	{padding: 10px 10px 10px 10px;
+					background-color: #ffffff;
+					text-align: center}
+
+table#maintable td	{padding: 10px 10px 10px 10px;
+					background-color: #ffffff;
+					text-align: center}
