Signed-off-by: takashi.mizuki <takashi.mizuki@takashi>

--- a/inventory-control/WebContent/css/style.css
+++ b/inventory-control/WebContent/css/style.css
@@ -54,7 +54,7 @@ input#submit_buttona {width: 150px;
 					 font-size: 18px;
 					 font-weight: bold;
 					 background-color: #00ff00;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #00ff00;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
@@ -66,7 +66,7 @@ input#submit_buttonb {width: 150px;
 					 font-size: 15px;
 					 font-weight: bold;
 					 background-color: #ff0000;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #ff0000;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
@@ -78,7 +78,7 @@ input#submit_buttonc {width: 150px;
 					 font-size: 15px;
 					 font-weight: bold;
 					 background-color: #ffd700;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #ffd700;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
@@ -90,7 +90,7 @@ input#submit_buttond {width: 150px;
 					 font-size: 15px;
 					 font-weight: bold;
 					 background-color: #00ff00;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #00ff00;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
@@ -101,7 +101,7 @@ input#submit_buttond {width: 150px;
 input#submit_buttone {font-size: 15px;
 					 font-weight: bold;
 					 background-color: #00ff00;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #00ff00;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
@@ -111,7 +111,7 @@ input#submit_buttone {font-size: 15px;
 input#submit_buttonf {font-size: 15px;
 					 font-weight: bold;
 					 background-color: #ff0000;
-					 border: solid 1px #aaaaaa;
+					 border: solid 1px #ff0000;
 					 box-shadow: 2px 2px 30px #aaaaaa;
 					 -moz-box-shadow: 2px 2px 30px #aaaaaa;
 					 -webkit-box-shadow: 2px 2px 30px #aaaaaa;
